--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
         <activity android:name=".activity.MainActivity"/>
         <activity android:name=".activity.CloseActivity" />
+        <activity android:name=".activity.TestActivity"/>
     </application>
 
 </manifest>
