1.增加了 设置界面UI布局和简单逻辑处理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name=".activity.MainActivity"/>
         <activity android:name=".activity.CloseActivity" />
         <activity android:name=".activity.TestActivity"/>
+        <activity android:name=".activity.SetActivity" />
+        <activity android:name=".activity.QueryActivity" />
     </application>
 
 </manifest>
